# AICryptoBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: docker.yml
aicryptobot/: constant.py  main.py  template.html  watcher.py
aicryptobot/cex/: __init__.py  binance_api.py  binance_cex.py  binance_indicator.py  okx_cex.py
aicryptobot/engine/: __init__.py  template.html
aicryptobot/llm/: __init__.py  claude_llm.py  openai_llm.py
aicryptobot/telegram/: __init__.py
src/: constant.py  ema_detector.py  main.py  monitor.py  subscription_manager.py
src/datasource/: __init__.py  binance_api.py  stock.py  tradingview.py
src/engine/: __init__.py  template.html
src/llm/: __init__.py  definition.py  openai_llm.py
src/telegram/: __init__.py
